--- a/style.css
+++ b/style.css
@@ -1,310 +1,186 @@
-*{
-    margin:0px;
-    padding:0px;
-    font-family: Arial, Helvetica, sans-serif;
-    border:border-box;
-}
-.navbar{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    height:60px;
-    background-color: #0f1111;
-    color: white;
-}
-.nav-logo{
-    height: 50px;
-    width: 113px;
-}
-.logo{
-    background-image: url('amazon_logo.png');
-    height: 50px;
-    width: 100%;
-    background-size: cover;
-}
-.nav-logo:hover{
-    border:2px solid white;
-    border-radius: 4px;
-}
-/* box2 */
-.add-icon{
-    display: flex;
-    align-items: center;
-}
-.add-first{
-    color:#cccccc;
-    font-size: 0.9rem;
-    padding-left: 15px;
-}
-.add-second{
-    font-size: 1rem;
-    padding-left: 3px;
-}
-.nav-address:hover{
-    border:2px solid white;
-    border-radius: 4px;
-    cursor: pointer;
-}
-/* box3 */
-.nav-search{
-    display: flex;
-    background-color: pink;
-    height: 40px;
-    width: 620px;
-    border-radius: 4px;
-}
-.search-select{
-    background-color: #f3f3f3;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-    width:50px;
-    border: none;
-    text-align: center;
-}
-.nav-search:hover{
-    border: 2px solid orange;
-}
-.search-input{
-    width: 100%;
-    font-size: 1rem;
-    border: none;
-}
-.search-icon{
-    width: 45px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    background-color: rgb(255, 187, 0);
-    color: #0f1111;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AmazonClone</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+    <div class="navbar">
+        <div class="nav-logo">
+            <div class="logo"></div>
+        </div>
 
-}
-/* box4 */
-.nav-first{
-    font-size: 0.75rem;
-}
-.nav-second{
-    font-size: 0.8rem;
-    font-weight: 700;
-}
-.nav-signin:hover,.nav-return:hover{
-    border:2px solid white;
-    border-radius: 4px;
-    cursor: pointer;
-}
-/* box5 */
-.nav-cart i {
-    font-size: 30px;
-}
-.nav-cart{
-    font-size: 0.85rem;
-    font-weight: 700;
-}
-.nav-cart:hover{
-    border:2px solid white;
-    border-radius: 4px;
-    cursor: pointer;
-}
-/* panel */
-.panel{
-    height:40px;
-    background-color: #222f3d;
-    display: flex;
-    color: white;
-    align-items: center;
-    justify-content: space-around;
-}
-.panel-options{
-    display: flex;
-    width: 70%;
-    font-size: 0.9rem;
-}
-.panel-options p{
-    margin-left:15px;
-    cursor: context-menu;
-}
-.panel-options p:hover{
-    text-decoration: underline;
-}
-.panel-deals{
-    font-size: 0.9rem;
-    font-weight: 700;
-}
-/* hero-section */
-.hero-section{
-    background-image: url(hero_image.jpg);
-    height:350px;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-}
-.hero-message{
-    height: 40px;
-    width: 90%;
-    background-color: white;
-    color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 0.85rem;
-    position: relative;
-    bottom:35px;
-}
-.hero-message a{
-    color:#007185;
-    cursor: pointer;
-    text-decoration: underline;
-}
-/* shop-section */
-.shop-section{
-    height:980px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    background-color: #d4dbd9;
-}
-.box{
-    height:400px;
-    width: 23%;
-    /* border: 2px solid black; */
-    background-color: white;
-    padding:20px 0px 15px;
-    margin-top: 15px;
-}
-.box-image{
-    margin-top:1rem;
-    margin-bottom: 1rem;
-    height:300px;
-    background-size: cover;
-}
-.box-content{
-    margin-left: 1rem;
-    margin-right: 1rem;
-}
-.box-content h2{
-    margin-bottom: 6px;
-}
-.box-content p{
-    color: #007185;
-    cursor: context-menu;
-}
-.box-content p:hover{
-    text-decoration: underline;
-}
-/* sign-in */
-.sign-in{
-    height:150px;
-    /* background-color: pink; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
+        <div class="nav-address">
+            <p class="add-first">Deliever to</p>
+            <div class="add-icon">
+                <i class="fa-solid fa-location-dot"></i>
+                <p class="add-second">India</p>
+            </div>
+        </div>
+
+        <div class="nav-search">
+            <select class="search-select">
+                <option>All</option>
+            </select>
+            <input placeholder="Search Amazon"class="search-input">
+            <div class="search-icon">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+        </div>
+
+        <div class="nav-signin">
+            <p class="nav-first">Hello,sign in</p>
+            <p class="nav-second">Account & Lists</p>
+        </div>
+
+        <div class="nav-return">
+            <p class="nav-first">Returns</p>
+            <p class="nav-second">& Orders</p>
+        </div>
+
+        <div class="nav-cart">
+            <i class="fa-solid fa-cart-shopping"></i>
+            Cart
+        </div>
+    </div>
+
+    <div class="panel">
+        <div class="panel-all">
+            <i class="fa-solid fa-bars"></i>
+            All
+        </div>
+        <div class="panel-options">
+            <p>Toady's Deal</p>
+            <p>Customer Service</p>
+            <p>Registry</p>
+            <p>Gift Cards</p>
+            <p>Sell</p>
+        </div>
+        <div class="panel-deals">
+            Shop deals in Electronics
+        </div>
+    </div>
+</header>
+
+<div class="hero-section">
+    <div class="hero-message">
+        <p>You are on amazon.com.You can also shop on Amazon India for millions of products with fast local delivery.
+            <a>Click here to go to amazon.in</a>
+        </p>
+    </div>
+</div>
+
+<div class="shop-section">
+    <div class="box1 box">
+        <div class="box-content">
+        <h2>Cloths</h2>
+        <div class="box-image" style="background-image: url('assets/box1_image.jpg');"></div>
+        <p>See more</p>
+        </div>
+    </div>
+    <div class="box2 box"><div class="box-content">
+        <h2>Health & Personal Care</h2>
+        <div class="box-image" style="background-image: url('assets/box2_image.jpg');"></div>
+        <p>See more</p>
+        </div></div>
+    <div class="box3 box"><div class="box-content">
+        <h2>Furniture</h2>
+        <div class="box-image" style="background-image: url('assets/box3_image.jpg');"></div>
+        <p>See more</p>
+        </div></div>
+    <div class="box4 box"><div class="box-content">
+        <h2>Electronics</h2>
+        <div class="box-image" style="background-image: url('assets/box4_image.jpg');"></div>
+        <p>See more</p>
+        </div></div>
+    <div class="box4 box"><div class="box-content">
+        <h2>Beauty Picks</h2>
+        <div class="box-image" style="background-image: url('assets/box5_image.jpg');"></div>
+        <p>See more</p>
+        </div></div>
+    <div class="box4 box"><div class="box-content">
+        <h2>Pet Care</h2>
+        <div class="box-image" style="background-image: url('assets/box6_image.jpg');"></div>
+        <p>See more</p>
+        </div></div> 
+    <div class="box4 box"><div class="box-content">
+        <h2>New arrivals in Toys</h2>
+        <div class="box-image" style="background-image: url('assets/box7_image.jpg');"></div>
+        <p>See more</p>
+        </div></div>
+    <div class="box4 box"><div class="box-content">
+        <h2>Discover fashion trends</h2>
+        <div class="box-image" style="background-image: url('assets/box8_image.jpg');"></div>
+        <p>See more</p>
+        </div></div>   
+</div>
+<br><hr>
+<div class="sign-in">
+    <p>See personalized recommendations</p>
+    <button>Sign in</button>
+    <p class ="customer">New customer?<a>Start here.</a></p>
+</div>
+<hr>
 
 
-.sign-in p{
-    font-size: 0.78rem;
-    font-weight: 600;
-}
-button{
-    margin-top: 3px;
-    height:28px;
-    width: 220px;
-    font-weight: 700;
-    background-color: rgb(252, 180, 46);
-    border-radius: 5px;
-    margin-bottom: 3px;
-}
-button:hover{
-    background-color: orange;
-    cursor: pointer;
-}
-
-.sign-in a{
-    color: #007185;
-    cursor: context-menu;
-}
-.sign-in a:hover{
-    text-decoration: underline;
-}
-/* footer */
-footer{
-    margin-top: 15px;
-}
-.foot-panel1{
-    background-color: #37475a;
-    color: white;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 0.9rem;
-}
-.foot-panel2{
-    background-color: #222f3d;
-    color: white;
-    height:300px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-ul p{
-    font-weight: 700;
-}
-ul a{
-    display: block;
-    font-size: 0.87rem;
-    margin-top: 10px;
-    color:#dddddd;
-}
-.foot-panel3{
-    height: 70px;
-    background-color: #222f3d;
-    color: white;
-    border-top: 0.1px solid rgb(165, 162, 162,0.3);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.logo{
-    background-image: url("amazon_logo.png");
-    background-size: cover;
-    height: 50px;
-    width: 100px;
-}
-
-.details{
-    margin-left: 60px;
-}
-.details button{
-    height:35px;
-    width:130px;
-    background-color: #222f3d;
-    color: rgb(241,232,232,0.6);
-    border: 1px solid rgb(241, 232, 232,0.2);
-}
-.details button:hover{
-    background-color: white;
-    color:#222f3d;
-    cursor: pointer;
-}
-/* panel4 */
-.foot-panel4{
-    border-top: 0.1px solid rgb(165, 162, 162,0.3);
-    background-color: #222f3d;
-    color: white;
-    height: 76px;
-}
-.pages{
-    font-size: 1rem;
-    text-align: center;
-    padding-top: 16px;
-}
-.copyright{
-    font-size: 0.9rem;
-    text-align: center;
-    margin-top: 5px;
-}
+<footer>
+    <div class="foot-panel1">Back to Top</div>
+    <div class="foot-panel2">
+        <ul>
+            <p>Get to Know Us</p>
+            <a>Careers</a>
+            <a>Blog</a>
+            <a>About Amazon</a>
+            <a>Investor Relations</a>
+            <a>Amazon Devices</a>
+            <a>Amazon Science</a>
+        </ul>
+        <ul>
+            <p>Make Money with Us</p>
+            <a>Sell products on Amazon</a>
+            <a>Sell on Amazon Business</a>
+            <a>Advertise your Products</a>
+            <a>Self-Publish with Us</a>
+            <a>Host an Amazon Hub</a>
+            <a>See More and Make</a>
+        </ul>
+        <ul>
+            <p>Amazon Payment Products</p>
+            <a>Amazon Business Card</a>
+            <a>Shop with Points</a>
+            <a>Reload Your Balance</a>
+            <a>Amazon Currency Converter</a>
+        </ul>
+        <ul>
+            <p>Let Us Help You</p>
+            <a>Amazon and Covid-19</a>
+            <a>Your Account</a>
+            <a>Yours Orders</a>
+            <a>Returns & Replacements</a>
+            <a>Amazon Assistant</a>
+            <a>Help</a>
+        </ul>
+    </div>
+    <div class="foot-panel3">
+        <div class="logo"></div>
+        <div class="details">
+            <button><i class="fa-solid fa-comment"></i>&#160;English</button>
+            <button><i class="fa-solid fa-dollar-sign"></i>&#160;USD-U.S.Dollar</button>
+            <button><i class="fa-brands fa-font-awesome"></i>&#160;United States</button>
+        </div>
+    </div>
+    <div class="foot-panel4">
+        <div class="pages">
+            <a>Consitions of Use</a>
+            <a>Privacy Notice</a>
+            <a>Your Ads Privacy Choices</a>
+        </div>
+        <div class="copyright"><i class="fa-solid fa-copyright"></i>1996-2023, Amazon.com , Inc. or its affiliates</div>
+    </div>
+</footer>
+</body>
+</html>
